--- a/wiki/BetaSiteFeedback.wiki
+++ b/wiki/BetaSiteFeedback.wiki
@@ -2,7 +2,7 @@
 
 = User Profile Pages =
 
-* the <div> for right column is set to 615px width, so it can't accommodate wider content. photographs and graphic illustrations frequently exceed this width, and video will eventually begin to exceed this width. perhaps add site ability to resize content? example: http://beta.ourmedia.org/user/145932 (my profile) -Cheryl
+the <div> for right column is set to 615px width, so it can't accommodate wider content. photographs and graphic illustrations frequently exceed this width, and video will eventually begin to exceed this width. perhaps add site ability to resize content? example: http://beta.ourmedia.org/user/145932 (my profile) -Cheryl
 
 
 = Details =
