Edited wiki page through web user interface.

--- a/wiki/BetaSiteFeedback.wiki
+++ b/wiki/BetaSiteFeedback.wiki
@@ -23,6 +23,9 @@ i see that there is a check box for terms of service under 'options', that terms
 4- *Marketing OM to Individuals not just 'Causes' or Non-Profits*
 we should make sure that when defining 'causes' it does not exclude individuals. we want people who are not a part of a non-profit to want to use ourmedia too. but at the same time discourage youtube-y type crazy media. we want to attract people who are about change in the world. action.
 
+5- *Claim your Internet Archive Accounts*
+would love ourmedia to have the ability to display all the content i've uploaded on the Archive. i would have an AMAZING profile, as i have about 600 videos there, never have i been able to display that anywhere. WOW.
+
 ===Cheryl===
 
 comments here
