Edited wiki page through web user interface.

--- a/wiki/Oct9Session.wiki
+++ b/wiki/Oct9Session.wiki
@@ -7,7 +7,18 @@ Add your content here.
 
 = Jay =
 
-Add your content here.  
+since jay kept the list of channels we brainstormed I'm listing them under his name:
+
+# Rainforest Action Network (RAN)
+# politicalvideo.org
+# Ripe for REMIX (collection mashup source material)
+# Feminist Majority
+# Indigenous Channel (media by/for indigenous people)
+# Remixed Right (a channel for killer mashups)
+# Abstract and loving it (artsy videos? jay's mad crazy channel?)
+# Church Channel / God Kick
+# Women Vloggers
+# Digital Rights (concerned with digital media rights, creative commons, etc)
 
 
 
