Edited wiki page through web user interface.

--- a/wiki/Oct9Session.wiki
+++ b/wiki/Oct9Session.wiki
@@ -9,7 +9,7 @@ Add your content here.
 
 since jay kept the list of channels we brainstormed I'm listing them under his name:
 
-== Channels ==
+== Channels We'll Create ==
 
   # Rainforest Action Network (RAN)
   # politicalvideo.org
