--- a/wiki/email1.wiki
+++ b/wiki/email1.wiki
@@ -1,4 +1,5 @@
-SPEDROFF 102408SP
+102408SP SPEDROFF 
+
 1) Please register (if you're already an Ourmedia member, register a
 2nd dummy account). We want to hear your thoughts on how we can
 simplify the registration process: what info should be included or
