--- a/wiki/email3.wiki
+++ b/wiki/email3.wiki
@@ -1,4 +1,5 @@
-#summary One-sentence summary of this page.
+#summary 102308CB CBAUTISTA
+
 Good Morning Mr. Lasica!  I am one of Marie Drennan's students at SF
 State.  I created my own account on your ourmedia website, and was
 able to explore some of the things that your site had to offer.  After
