Edited wiki page through web user interface.

--- a/wiki/BetaSiteFeedback.wiki
+++ b/wiki/BetaSiteFeedback.wiki
@@ -6,28 +6,28 @@ Jay, Ryanne & Cheryl's notes on  the 8 Tasks
 
 ===Jay===
 
-*Images*
-  thumbnails need to look better
-profile thumbnails should be square
+1- *Images*
+--thumbnails need to look better
+--profile thumbnails should be square
 
-*Commenting*
+2- *Commenting*
 --when i comment on channel page, i shouldnt have to login again
 
-Channels:
+3- *Channels*
 --why on http://beta.ourmedia.org/node/429830, i cant go to full channel?
 --why is date wrong (June 16, 2008, 11:32 pm) on http://beta.ourmedia.org/node/378170
 
-Profile:
+4- *Profile*
 --http://beta.ourmedia.org/node/378170 (my name/profile should link to my profile)
 --be able to link all my archive accounts to ourmedia page
 
-Front Page:
+5- *Front Page*
 --can the Showcase change dynamically?
 --can i chat with other users online?
 
 6- *RSS feeds*
---most viewed, latest posted, etc <br>
---add RSS feeds to user profiles <br>
+--most viewed, latest posted, etc 
+--add RSS feeds to user profiles 
 --can i "Track" a channel like an ebay item
 
 7- *Forum:*
