--- a/wiki/EC2.wiki
+++ b/wiki/EC2.wiki
@@ -1,5 +1,4 @@
 #summary Instructions for getting ourmedia running on a basic Amazon EC2 image - AMI
-#labels ql
 
 = Development for Ourmedia on EC2 =
 
@@ -9,14 +8,17 @@ This information should get a user from nothing to running a development box of 
 = Details =
 
 Instructions:
-  * Get basic ubuntu AMI and run it
-  * Install Apache2, Mysql, PHP-Curl
+  * Get basic ubuntu AMI and insantiate it: ami-1cd73375 (http://alestic.com/)
+  * Install Apache2, Mysql, PHP-Curl: 
+    ** sudo apt-get update
+    ** sudo apt-get upgrade
+    ** sudo apt-get install apache2 php5 php5-curl php5-imagick php5-mysql php5-gd mysql-server
   * Get Drupal 6.4 install
   * (Optional) Setup exim email client if you want email notifications
     ** Install and Setup exim4: http://borisbrodsky.com/2007/12/ubuntu-relay-email-server-thro-11.html
     ** Edit authorization credentials in /etc/exim4/passwd.client (*:username:password)
   * Get current Ourmedia theme and modules from SVN
-  * Get current Ourmedia test database
+  * Get current Ourmedia test database, available in root of SVN trunk
   * Play!
 
 I will be updating this page with specifics and command lines as I move along.
